# insult-cli

./: README.md  pyproject.toml
insult/: me.py
src/: main.py  me.py
